<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/reminder_whole_row_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp">

        <ImageButton
            android:id="@+id/reminder_edit_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/edit_reminder_desc"
            app:srcCompat="@drawable/ic_mode_edit_grey_600_48dp" />

        <TextView
            android:id="@+id/reminder_small_top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/reminder_edit_button"
            android:layout_marginBottom="4dp"
            android:text="@string/id_reference"
            android:textColor="#b3ffffff"
            android:textIsSelectable="false"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/reminder_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminder_small_top_text"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/reminder_edit_button"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#e6ee9c"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/reminders_next_due_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminder_title_text"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/reminder_edit_button"
            android:layout_marginTop="4dp"
            android:text="@string/reminder_period"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#a5d6a7"
            android:textIsSelectable="false" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>
